# docs-arch

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: puml2svg-generation.yaml
ACME/Story-of-Foo/diagrams/: 10-milestone-introduction_of_the_cloud_UML_Components.puml
ACME/Story-of-Foo/domain_analysis/: analysis-accounts.pl.md  analysis-meta-presentation.pl.md  analysis-procedure.pl.md
AFS/Story-of-Foo/: analysis-accounts.pl.md  analysis-procedure.pl.md
AFS/Story-of-Foo/diagrams/: 10-milestone-cloud-introduction-c4.puml  10-milestone-cloud-introduction-comp.puml  10-milestone-introduction_of_the_cloud_C4.puml  _template.puml
principles/microservices/: .env
principles/microservices/slides/: 01-characteristics.md
python-course/functional-python/: 01-method-as-decorator.md  01-method-as-decorator.py  fp01_method_as_decorator.md  fp01_method_as_decorator.py  fp02_method_as_decorator_factory.md  fp02_method_as_decorator_factory.py  fp03_modifying_signatures.py
python-course/functional_python/: README.md  fp02_method_as_decorator_factory.md  fp03_modifying_signatures.md  fp03_modifying_signatures.py
templates/reveal.js-presentation/: .env  docker-compose.yaml
templates/reveal.js-presentation/resources/: footer.html
