[tool.poetry]
name = "docs-arch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
flake8 = "^3.8.4"
pdbpp = "^0.10.2"
freezegun = "^1.1.0"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]
pytest = "async"
pytest_async = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = [
    "*.py",
]